# ReciPys

./: .gitignore  LICENSE  README.md  debug.ipynb  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
benchmarking/: dhclab.sh  generate_data.py
examples/: tutorial.ipynb
recipys/: constants.py  ingredients.py  recipe.py  selector.py  step.py
recipys/tests/: __init__.py  test_ingredients.py  test_recipe.py
tests/: conftest.py  test_ingredients.py  test_recipe.py  test_selectors.py  test_steps.py
