[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipies"
version = "1.0"
description = "A modular preprocessing package for Pandas Dataframe"
readme = "README.md"
license = { text = "MIT license" }
authors = [
    { name = "Robin van de Water", email = "robin.vandewater@hpi.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12"
]
keywords = ["recipies", "pandas", "dataframe", "polars", "preprocessing", "recipys"]
dependencies = [
    "coverage>=7.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars[all]>=1.0.0",
    "scikit-learn>=1.4.0"
]

[project.scripts]
recipys = "recipys.recipe:Recipe"

[tool.pytest.ini_options]
testpaths = ["tests"]